--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                             
                                             <div className="flex items-center justify-between mb-2">
                                                 <div className="text-left">
-                                                    <span className="block text-xs font-bold text-gray-700">ネガティブ感情の緩和</span>
-                                                    <span className="text-[10px] text-gray-500">(TMD:総合的気分状態)</span>
+                                                    <span className="block text-xs font-bold text-gray-700">心のバランスが整う</span>
+                                                    <span className="text-[10px] text-gray-500">(TMD:総合的気分状態の改善)</span>
                                                 </div>
                                                 <div className="bg-white px-2 py-1 rounded border border-teal-200 text-teal-700 font-bold text-xs flex items-center">
                                                     <TrendingDownIcon className="w-3 h-3 mr-1" />
@@ -109,8 +109,8 @@
 
                                             <div className="flex items-center justify-between">
                                                 <div className="text-left">
-                                                    <span className="block text-xs font-bold text-gray-700">ストレス・興奮の抑制</span>
-                                                    <span className="text-[10px] text-gray-500">(LF:交感神経活動指標)</span>
+                                                    <span className="block text-xs font-bold text-gray-700">深い安らぎ（リラックス）</span>
+                                                    <span className="text-[10px] text-gray-500">(LF:交感神経の鎮静化)</span>
                                                 </div>
                                                 <div className="bg-white px-2 py-1 rounded border border-teal-200 text-teal-700 font-bold text-xs flex items-center">
                                                     <TrendingDownIcon className="w-3 h-3 mr-1" />
@@ -187,11 +187,11 @@
                                 <div className="bg-white p-4 rounded-lg shadow-sm border border-orange-100">
                                     <div className="flex items-center gap-2 mb-2 text-orange-600 font-bold text-sm">
                                         <ActivityIcon className="w-4 h-4" />
-                                        疲労回復・体調について
+                                        心身の調律と元気の回復
                                     </div>
                                     <p className="text-sm text-gray-700 leading-relaxed">
-                                        「疲れの取れ方が普段と違うと感じる」<br/>
-                                        「血液検査の数値が良い変化をした」
+                                        「心身ともに浄化、調律されていく感じです。このスピーカーを聴いて、元気を恢復して生きたいです。」<br/>
+                                        「聴いていると体の血流がよくなり、頭の中が空っぽになって深いリラックス状態になりました。」
                                     </p>
                                 </div>
                                 <div className="bg-white p-4 rounded-lg shadow-sm border border-orange-100">
@@ -200,7 +200,8 @@
                                         免疫・健康維持について
                                     </div>
                                     <p className="text-sm text-gray-700 leading-relaxed">
-                                        「ぐっすり眠れるようになり、風邪をひきにくくなった気がする（免疫力が上がった）」
+                                        「このスピーカーから出る心地よい音は、私にとってすでに1台の治療器具を得たに等しいと感じております。」<br/>
+                                        「力を持った音、すなわち「波動」は、使っていない神経や体のある部分に刺激を与え、それが動き出すようにしてくれます。部屋の空気も柔らかくなりました。」
                                     </p>
                                 </div>
                             </div>
@@ -216,7 +217,7 @@
                                 <div>
                                     <p className="mb-1">
                                         <span className="font-bold">※1 検証概要：</span>
-                                        39～55歳の健常ボランティア男女6名を対象に、波動スピーカーMS1001-Mを用いた音響再生が自律神経系および感情プロフィールに対して及ぼす影響を検証。
+                                        今回の検証（成人男女を対象とした実測）により、客観的評価である心拍変動解析と、主観的評価であるPOMS2の双方において、これまで波動スピーカーのユーザーから寄せられていた「リラックスできる」という感想を裏付ける結果が得られた。主観と客観のデータが一致したことは、本製品の特性を示す上で意義深いものである。
                                         スピーカーからの距離・角度が異なる6カ所において測定を実施。
                                     </p>
                                     <p className="mb-1">
