--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     <div className="w-full h-full bg-gray-50 rounded-lg p-5 flex flex-col items-center">
                                         <h3 className="font-bold text-lg md:text-xl text-gray-700 mb-2 mt-2">
                                             既存スピーカーの空間<br/>
-                                            <span className="text-sm font-normal text-gray-500">（指向性スピーカー）</span>
+                                            <span className="text-sm font-normal text-gray-500">（従来のスピーカー）</span>
                                         </h3>
                                         
                                         <div className="bg-yellow-100 text-gray-600 font-black text-4xl w-20 h-20 rounded-full flex items-center justify-center shadow-sm mb-4 border-4 border-white grayscale">
