--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                         これはリラックス状態が確実に誘導されている可能性が高いことを示唆しており、顧客体験価値（CX）の向上に寄与すると考えられます。
                                     </p>
                                     <p>
-                                        （引用元：一般社団法人日本レジリエンス医学研究所 松村浩道 他「波動スピーカーMS1001-Mを用いた音響再生が自律神経系および感情プロフィールに対して及ぼす影響」）
+                                        （引用元：一般社団法人日本レジリエンス医学研究所「波動スピーカーMS1001-Mを用いた音響再生が自律神経系および感情プロフィールに対して及ぼす影響」）
                                     </p>
                                 </div>
                             </div>
